--- a/src/global.css
+++ b/src/global.css
@@ -38,4 +38,5 @@ body, input, body textarea, body button {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 1rem;
+  line-height: 1.4rem;
 }
